welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ')' expected but integer literal found.
  else if (a+b == b+c+10 66 a+b == a+c+10)
                         ^blueTicket:8: error: illegal start of simple expression
} 
^